# bloom_game

./: .README  Cargo.toml  README.md
src/: camera_plugin.rs  main.rs  player_plugin.rs  terrain_plugin.rs
src/bevy_rapier2d_example/: mod.rs
src/mechanical_component/: feet.rs  generic.rs  mod.rs
src/mechanical_components/: generic.rs
src/player_plugin/: mod.rs  player_assembly.rs
src/robot_factory/: mod.rs  robot_parts.rs
