[package]
name = "test_game"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.15.0", features = ["wayland","dynamic_linking"] }
bevy_rapier2d = { version = "0.28.0", features = ["debug-render-2d", "simd-stable", "parallel"] }
bevy-inspector-egui = "0.28.0"